@@ -1,3 +1,8 @@
+2006-04-03  Adam Jackson  <ajax@freedesktop.org>
+
+	* xcursorgen.c:
+	Bug #3270: Fix rounding errors.
+
 2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
